--- a/landing/index.html
+++ b/landing/index.html
@@ -1,59 +1,83 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="ColorYourData : Auxiliary material for the Micro Focus Business Value Dashboard">
+<head>
+  <meta charset='utf-8'>
+  <meta http-equiv="X-UA-Compatible" content="chrome=1">
+  <meta name="description" content="ColorYourData : Auxiliary material for the Micro Focus Business Value Dashboard">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+  <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>ColorYourData</title>
-  </head>
+  <title>ColorYourData</title>
+</head>
 
-  <body>
+<body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.houston.softwaregrp.net/opr/ColorYourData">View on GitHub</a>
+  <!-- HEADER -->
+  <div id="header_wrap" class="outer">
+    <header class="inner">
+      <a id="forkme_banner" href="https://github.houston.softwaregrp.net/opr/ColorYourData">View on GitHub</a>
 
-          <h1 id="project_title">ColorYourData</h1>
-          <h2 id="project_tagline">Auxiliary material for the Micro Focus Business Value Dashboard</h2>
+      <h1 id="project_title">ColorYourData</h1>
+      <h2 id="project_tagline">Auxiliary material for the Micro Focus Business Value Dashboard</h2>
 
-        </header>
-    </div>
+    </header>
+  </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (@defunkt), PJ Hyett (@pjhyett), and Tom Preston-Werner (@mojombo) founded GitHub.</p>
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
+  <!-- MAIN CONTENT -->
+  <div id="main_content_wrap" class="outer">
+    <section id="main_content" class="inner">
+      <h3>
+        <a id="widgets" class="anchor" href="#widgets" aria-hidden="true">
+          <span aria-hidden="true" class="octicon octicon-link"></span>
+        </a>Custom Widgets</h3>
+      <p>BVD has an API to create your own widgets with JavaScript, D3 and jQuery. With a dynamic loading feature you can also
+        load your own SVG library to make widget authoring even easier. Click this
+        <a href="https://github.houston.softwaregrp.net/opr/ColorYourData/tree/master/widgets">link</a>
+        to learn more about custom widgets and start your own creation with one of the provided examples.
+      </p>
+      <h3>
+        <a id="welcome-bvd-community" class="anchor" href="#welcome-bvd-community" aria-hidden="true">
+          <span aria-hidden="true" class="octicon octicon-link"></span>
+        </a>Welcome to the BVD community pages.</h3>
+      <p>Here you will find material free of charge to enhance your BVD experience.</p>
+      <h3>
+        <a id="generators" class="anchor" href="#generators" aria-hidden="true">
+          <span aria-hidden="true" class="octicon octicon-link"></span>
+        </a>Sample Generators</h3>
+      <p>Often you want to start to work with BVD w/o having all data sources in place. E.g. to verify your dashboards or to
+        prepare for demos. We provide a flexible data generator to send simulated real-time data to BVD. Follow this
+        <a href="https://github.houston.softwaregrp.net/opr/ColorYourData/tree/master/generators/node">link</a> to find out more.
+      </p>
+      <h3>
+        <a id="connectors" class="anchor" href="#connectors" aria-hidden="true">
+          <span aria-hidden="true" class="octicon octicon-link"></span>
+        </a>Data Push Connectors</h3>
+      <p>Data push connectors are code snippets to help linking data sources to the BVD push API. Click this
+        <a href="https://github.houston.softwaregrp.net/opr/ColorYourData/tree/master/connectors">link</a>
+        to learn more
+      </p>
+      <h3>
+        <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true">
+          <span aria-hidden="true" class="octicon octicon-link"></span>
+        </a>Support or Contact</h3>
+      <p>Want to learn about BVD and the Operations Bridge Suite? Check out our
+        <a href="https://docs.software.hpe.com/">documentation</a> and
+        <a href="https://software.microfocus.com/en-us/software/operations-bridge-event-correlation#!&swanchor=keyfeatures">product page</a>.</p>
+    </section>
+  </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">ColorYourData maintained by <a href="https://github.houston.softwaregrp.net/opr">opr</a></p>
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
+  <!-- FOOTER  -->
+  <div id="footer_wrap" class="outer">
+    <footer class="inner">
+      <p class="copyright">ColorYourData maintained by
+        <a href="https://github.houston.softwaregrp.net/opr">EntCo Software</a>
+      </p>
+    </footer>
+  </div>
 
-    
 
-  </body>
+
+</body>
+
 </html>
