--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             Learn more about the Operations Bridge Suite.
           </p>
         </div>
-        <div class="_panel service-card" onclick="window.location.href='https://docs.software.hpe.com/OpsB/2017.08/Content/Home.htm'">
+        <div class="_panel service-card" onclick="window.location.href='https://docs.software.hpe.com/OpsB/2017.11/Content/Home.htm'">
           <img align="center" src="img/Doc-Official.svg" width="48" height="48" />
           <h2>BVD Online Docs</h2>
           </a>
@@ -85,7 +85,7 @@
     <div class="section-box">
       <div id="cc" class="section-header" style="background: rgb(116, 37, 173)">Community Content</div>
       <div id="community" class="service-card-container">
-        <div class="_panel service-card" onclick="window.location.href='https://github.houston.softwaregrp.net/opr/ColorYourData/tree/master/widgets'">
+        <div class="_panel service-card" onclick="window.location.href='https://github.com/MicroFocus/ColorYourData/tree/master/widgets'">
           <img align="center" src="img/Tools-2.svg" width="48" height="48" />
           <h2>Custom Widgets</h2>
           </a>
@@ -96,7 +96,7 @@
             Click here to learn more about custom widgets and start your own creation with one of the provided examples.
           </p>
         </div>
-        <div class="_panel service-card" onclick="window.location.href='https://github.houston.softwaregrp.net/opr/ColorYourData/tree/master/generators/node'">
+        <div class="_panel service-card" onclick="window.location.href='https://github.com/MicroFocus/ColorYourData/tree/master/generators/node'">
           <img align="center" src="img/Consolidate.svg" width="48" height="48" />
           <h2>Sample Generators</h2>
           <p>
@@ -104,14 +104,14 @@
             for stakeholder demos. We provide a configurable data generator to send simulated real-time data to BVD.
           </p>
         </div>
-        <div class="_panel service-card" onclick="window.location.href='https://github.houston.softwaregrp.net/opr/ColorYourData/tree/master/connectors'">
+        <div class="_panel service-card" onclick="window.location.href='https://github.com/MicroFocus/ColorYourData/tree/master/connectors'">
           <img align="center" src="img/Cable-2.svg" width="48" height="48" />
           <h2>Data Push Connectors</h2>
           <p>
             Data push connectors are small adapters to help linking data sources to the BVD push API.
           </p>
         </div>
-        <div class="_panel service-card" onclick="window.location.href='https://github.houston.softwaregrp.net/opr/ColorYourData'">
+        <div class="_panel service-card" onclick="window.location.href='https://github.com/MicroFocus/ColorYourData'">
           <img align="center" src="img/Screen-Code.svg" width="48" height="48" />
           <h2>Git Hub</h2>
           <p>
