--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             Learn more about the Operations Bridge Suite.
           </p>
         </div>
-        <div class="_panel service-card" onclick="window.location.href='https://docs.software.hpe.com/OpsB/2017.11/Content/Home.htm'">
+        <div class="_panel service-card" onclick="window.location.href='https://docs.microfocus.com/suite?OpsB'">
           <img align="center" src="img/Doc-Official.svg" width="48" height="48" />
           <h2>BVD Online Docs</h2>
           </a>
