--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <div class="section-box">
       <div id="dd" class="section-header" style="background: rgb(198, 23, 157)">Dashboard Demos</div>
       <div id="demos" class="service-card-container">
-        <div class="_panel service-card" onclick="window.location.href='https://demo.coloryourdata.io/#/login/demo@coloryourdata.io/colour'">
+        <div class="_panel service-card" onclick="window.location.href='https://demo.coloryourdata.io/login/demo@coloryourdata.io/colour'">
           <img align="center" src="img/aobank.png" width="200" />
           <h2>AO Bank Demo</h2>
           </a>
