--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div id="gs" class="section-header" style="background:rgb(35, 28, 165)">Getting Started</div>
       <div id="contact" class="service-card-container">
         <div class="_panel service-card" onclick="window.location.href='https://software.microfocus.com/en-us/software/it-operations-business-value-dashboard'">
-          <img align="center" src="img/bvd_48.svg" width="48" height="48" />
+          <img align="center" src="img/bvd_microfocus_48.svg" width="48" height="48" />
           <h2>Business Value Dashboard</h2>
           </a>
           <p>
@@ -65,7 +65,7 @@
           </p>
         </div>
         <div class="_panel service-card" onclick="window.location.href='https://software.microfocus.com/en-us/software/operations-bridge-event-correlation#!&swanchor=keyfeatures'">
-          <img align="center" src="img/omiLogo_48.svg" width="48" height="48" />
+          <img align="center" src="img/opsbridge-blue--48.svg" width="48" height="48" />
           <h2>Operations Bridge Suite</h2>
           </a>
           <p>
