Jump to BVD 10.63 online docs

--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
             Learn more about the Operations Bridge Suite.
           </p>
         </div>
-        <div class="_panel service-card" onclick="window.location.href='https://docs.microfocus.com/suite?OpsB'">
+        <div class="_panel service-card" onclick="window.location.href='https://docs.software.hpe.com/BVD/10.63/Content/knowledge_base/knowledge_base.htm'">
           <img align="center" src="img/Doc-Official.svg" width="48" height="48" />
           <h2>BVD Online Docs</h2>
           </a>
           <p>
-            Read the Operations Bridge Suite and BVD online docs.
+            Read the BVD online docs for details.
           </p>
         </div>
       </div>
