--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <h2>AO Bank Demo</h2>
           </a>
           <p>
-            A dashboard drill-down scenario starting high level business data down to the bank branch IOT level.
+            A dashboard drill-down scenario starting with high level business data down to the bank branch IOT level.
           </p>
         </div>
         <div class="_panel service-card" onclick="window.location.href='http://52.14.252.205/bvd/login/viewer/Viewer!123'">
