Added link to marketplace

--- a/index.html
+++ b/index.html
@@ -149,8 +149,21 @@
         </div>
       </div>
     </div>
+    <div class="section-box">
+      <div id="gs" class="section-header" style="background:rgb(35, 28, 165)">Dashboard Marketplace</div>
+      <div id="contact" class="service-card-container">
+        <div class="_panel service-card" onclick="window.location.href='https://marketplace.microfocus.com/itom/category/opsb?product=Operations%20Bridge%20(OPSB)%20Suite&version=All%20versions&company=All%20companies'">
+          <img align="center" src="img/marketplace.png" width="200" />
+          <h2>ITOm Marketplace</h2>
+          </a>
+          <p>
+            Check out the ITOM Marketplace for dashboard downloads and other content.
+          </p>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="footer">&copy; 2017 EntIT Software LLC</div>
+  <div class="footer">&copy; 2018 EntIT Software LLC</div>
 </body>
 
 </html>
