Updated credentials for demo

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             A sophisticated example showing the unlimited design capabilities in the context of a train company.
           </p>
         </div>
-        <div class="_panel service-card" onclick="window.location.href='http://18.221.60.125/bvd/login/viewer/Viewer!123'">
+        <div class="_panel service-card" onclick="window.location.href='https://demo.coloryourdata.io/login/viewer1/Viewer!123'">
           <img align="center" src="img/mobile_all.png" width="200" />
           <h2>Mobile Device Demo</h2>
           </a>
