--- a/index.html
+++ b/index.html
@@ -147,6 +147,14 @@
             A train company dashboard drill-down scenario for mobile devices.
           </p>
         </div>
+        <div class="_panel service-card" onclick="window.location.href='http://18.221.60.125/bvd/login/viewer/Viewer!123'">
+          <img align="center" src="img/mobile-white.png" width="200" />
+          <h2>Mobile Device Demo (white style)</h2>
+          </a>
+          <p>
+            Another mobile-ready dashboard with modern white styling.
+          </p>
+        </div>
       </div>
     </div>
     <div class="section-box">
