--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             A train company dashboard drill-down scenario for mobile devices.
           </p>
         </div>
-        <div class="_panel service-card" onclick="window.location.href='http://18.221.60.125/bvd/login/viewer/Viewer!123'">
+        <div class="_panel service-card" onclick="window.location.href='https://tinyurl.com/mfsko2018'">
           <img align="center" src="img/mobile-white.png" width="200" />
           <h2>Mobile Device Demo (white style)</h2>
           </a>
