--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       </div>
     </div>
   </div>
-  <div class="footer">&copy; 2018 EntIT Software LLC</div>
+  <div class="footer">&copy; 2020 Micro Focus or one of its affiliates</div>
 </body>
 
 </html>
