Update URL to BVD

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="section-box">
       <div id="gs" class="section-header" style="background:rgb(35, 28, 165)">Getting Started</div>
       <div id="contact" class="service-card-container">
-        <div class="_panel service-card" onclick="window.location.href='https://software.microfocus.com/en-us/software/it-operations-business-value-dashboard'">
+        <div class="_panel service-card" onclick="window.location.href='https://www.microfocus.com/en-us/products/operations-bridge-suite/overview#block6'">
           <img align="center" src="img/bvd_microfocus_48.svg" width="48" height="48" />
           <h2>Business Value Dashboard</h2>
           </a>
