Point help page to a newer BVD version

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
     <div class="section-box">
       <div id="gs" class="section-header" style="background:rgb(35, 28, 165)">Getting Started</div>
       <div id="contact" class="service-card-container">
-        <div class="_panel service-card" onclick="window.location.href='https://www.microfocus.com/en-us/products/operations-bridge-suite/overview#block6'">
+        <div class="_panel service-card"
+          onclick="window.location.href='https://www.microfocus.com/en-us/products/operations-bridge-suite/overview#block6'">
           <img align="center" src="img/bvd_microfocus_48.svg" width="48" height="48" />
           <h2>Business Value Dashboard</h2>
           </a>
@@ -64,7 +65,8 @@
             Learn more about BVD.
           </p>
         </div>
-        <div class="_panel service-card" onclick="window.location.href='https://software.microfocus.com/en-us/software/operations-bridge-event-correlation#!&swanchor=keyfeatures'">
+        <div class="_panel service-card"
+          onclick="window.location.href='https://software.microfocus.com/en-us/software/operations-bridge-event-correlation#!&swanchor=keyfeatures'">
           <img align="center" src="img/opsbridge-blue--48.svg" width="48" height="48" />
           <h2>Operations Bridge Suite</h2>
           </a>
@@ -72,7 +74,8 @@
             Learn more about the Operations Bridge Suite.
           </p>
         </div>
-        <div class="_panel service-card" onclick="window.location.href='https://docs.microfocus.com/itom/Business_Value_Dashboard:10.64/Home'">
+        <div class="_panel service-card"
+          onclick="window.location.href='https://docs.microfocus.com/itom/Business_Value_Dashboard:2019.11/Home'">
           <img align="center" src="img/Doc-Official.svg" width="48" height="48" />
           <h2>BVD Online Docs</h2>
           </a>
@@ -85,7 +88,8 @@
     <div class="section-box">
       <div id="cc" class="section-header" style="background: rgb(116, 37, 173)">Community Content</div>
       <div id="community" class="service-card-container">
-        <div class="_panel service-card" onclick="window.location.href='https://github.com/MicroFocus/ColorYourData/tree/master/widgets'">
+        <div class="_panel service-card"
+          onclick="window.location.href='https://github.com/MicroFocus/ColorYourData/tree/master/widgets'">
           <img align="center" src="img/Tools-2.svg" width="48" height="48" />
           <h2>Custom Widgets</h2>
           </a>
@@ -96,15 +100,18 @@
             Click here to learn more about custom widgets and start your own creation with one of the provided examples.
           </p>
         </div>
-        <div class="_panel service-card" onclick="window.location.href='https://github.com/MicroFocus/ColorYourData/tree/master/generators/node'">
+        <div class="_panel service-card"
+          onclick="window.location.href='https://github.com/MicroFocus/ColorYourData/tree/master/generators/node'">
           <img align="center" src="img/Consolidate.svg" width="48" height="48" />
           <h2>Sample Generators</h2>
           <p>
-            Start to work with BVD without having all data sources in place. E.g. to verify your dashboards are working or to prepare
+            Start to work with BVD without having all data sources in place. E.g. to verify your dashboards are working
+            or to prepare
             for stakeholder demos. We provide a configurable data generator to send simulated real-time data to BVD.
           </p>
         </div>
-        <div class="_panel service-card" onclick="window.location.href='https://github.com/MicroFocus/ColorYourData/tree/master/connectors'">
+        <div class="_panel service-card"
+          onclick="window.location.href='https://github.com/MicroFocus/ColorYourData/tree/master/connectors'">
           <img align="center" src="img/Cable-2.svg" width="48" height="48" />
           <h2>Data Push Connectors</h2>
           <p>
@@ -123,7 +130,8 @@
     <div class="section-box">
       <div id="dd" class="section-header" style="background: rgb(198, 23, 157)">BVD Live Demos</div>
       <div id="demos" class="service-card-container">
-        <div class="_panel service-card" onclick="window.location.href='https://demo.coloryourdata.io/login/demo@coloryourdata.io/colour'">
+        <div class="_panel service-card"
+          onclick="window.location.href='https://demo.coloryourdata.io/login/demo@coloryourdata.io/colour'">
           <img align="center" src="img/aobank.png" width="200" />
           <h2>AO Bank Demo</h2>
           </a>
@@ -131,7 +139,8 @@
             A dashboard drill-down scenario starting with high level business data down to the bank branch IOT level.
           </p>
         </div>
-        <div class="_panel service-card" onclick="window.location.href='https://demo.coloryourdata.io/login/viewer1/Viewer!123'">
+        <div class="_panel service-card"
+          onclick="window.location.href='https://demo.coloryourdata.io/login/viewer1/Viewer!123'">
           <img align="center" src="img/train.png" width="200" />
           <h2>Train Demo</h2>
           </a>
@@ -139,7 +148,8 @@
             A sophisticated example showing the unlimited design capabilities in the context of a train company.
           </p>
         </div>
-        <div class="_panel service-card" onclick="window.location.href='http://18.221.60.125/bvd/login/viewer/Viewer!123'">
+        <div class="_panel service-card"
+          onclick="window.location.href='http://18.221.60.125/bvd/login/viewer/Viewer!123'">
           <img align="center" src="img/mobile_all.png" width="200" />
           <h2>Mobile Device Demo</h2>
           </a>
@@ -160,7 +170,8 @@
     <div class="section-box">
       <div id="gs" class="section-header" style="background:rgb(35, 28, 165)">Dashboard Marketplace</div>
       <div id="contact" class="service-card-container">
-        <div class="_panel service-card" onclick="window.location.href='https://marketplace.microfocus.com/itom/category/opsb?product=Operations%20Bridge%20(OPSB)%20Suite&version=All%20versions&company=All%20companies'">
+        <div class="_panel service-card"
+          onclick="window.location.href='https://marketplace.microfocus.com/itom/category/opsb?product=Operations%20Bridge%20(OPSB)%20Suite&version=All%20versions&company=All%20companies'">
           <img align="center" src="img/marketplace.png" width="200" />
           <h2>ITOm Marketplace</h2>
           </a>
