Update copyright and removed demos

--- a/index.html
+++ b/index.html
@@ -128,46 +128,6 @@
       </div>
     </div>
     <div class="section-box">
-      <div id="dd" class="section-header" style="background: rgb(198, 23, 157)">BVD Live Demos</div>
-      <div id="demos" class="service-card-container">
-        <div class="_panel service-card"
-          onclick="window.location.href='https://demo.coloryourdata.io/login/demo@coloryourdata.io/colour'">
-          <img align="center" src="img/aobank.png" width="200" />
-          <h2>AO Bank Demo</h2>
-          </a>
-          <p>
-            A dashboard drill-down scenario starting with high level business data down to the bank branch IOT level.
-          </p>
-        </div>
-        <div class="_panel service-card"
-          onclick="window.location.href='https://demo.coloryourdata.io/login/viewer1/Viewer!123'">
-          <img align="center" src="img/train.png" width="200" />
-          <h2>Train Demo</h2>
-          </a>
-          <p>
-            A sophisticated example showing the unlimited design capabilities in the context of a train company.
-          </p>
-        </div>
-        <div class="_panel service-card"
-          onclick="window.location.href='http://18.221.60.125/bvd/login/viewer/Viewer!123'">
-          <img align="center" src="img/mobile_all.png" width="200" />
-          <h2>Mobile Device Demo</h2>
-          </a>
-          <p>
-            A train company dashboard drill-down scenario for mobile devices.
-          </p>
-        </div>
-        <div class="_panel service-card" onclick="window.location.href='https://tinyurl.com/mfsko2018'">
-          <img align="center" src="img/mobile-white.png" width="200" />
-          <h2>Mobile Device Demo (white style)</h2>
-          </a>
-          <p>
-            Another mobile-ready dashboard with modern white styling.
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="section-box">
       <div id="gs" class="section-header" style="background:rgb(35, 28, 165)">Dashboard Marketplace</div>
       <div id="contact" class="service-card-container">
         <div class="_panel service-card"
@@ -182,7 +142,7 @@
       </div>
     </div>
   </div>
-  <div class="footer">&copy; 2020 Micro Focus or one of its affiliates</div>
+  <div class="footer">&copy; 2023 Open Text Corporation. All rights reserved.</div>
 </body>
 
 </html>
